generated/checkers/refine/KN-Uninit-Data-d313eb8b-7/build_logs/syntax-repair-refine-0-3/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static clang::QualType {anonymous}::SAGenTestChecker::unwrapArrayElementBaseType(clang::QualType)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:243:22: warning: unused variable ‘AT’ [-Wunused-variable]
  243 |   while (const auto *AT = dyn_cast<ArrayType>(Ty)) {
      |                      ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::hasImplicitPadding(clang::QualType, clang::ASTContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:259:19: warning: unused variable ‘AT’ [-Wunused-variable]
  259 |   if (const auto *AT = dyn_cast<ArrayType>(QT.getTypePtr())) {
      |                   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:304:56: error: cannot convert ‘llvm::APSInt’ to ‘clang::Expr::EvalResult&’
  304 |       if (!BW->isValueDependent() && BW->EvaluateAsInt(W, Ctx))
      |                                                        ^
      |                                                        |
      |                                                        llvm::APSInt
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/DeclCXX.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ExprCXX.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/CFG.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Expr.h:664:34: note:   initializing argument 1 of ‘bool clang::Expr::EvaluateAsInt(clang::Expr::EvalResult&, const clang::ASTContext&, clang::Expr::SideEffectsKind, bool) const’
  664 |   bool EvaluateAsInt(EvalResult &Result, const ASTContext &Ctx,
      |                      ~~~~~~~~~~~~^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:336:6: warning: ‘void {anonymous}::SAGenTestChecker::markPartiallyInit(clang::ento::ProgramStateRef&, const clang::VarDecl*) const’ defined but not used [-Wunused-function]
  336 | void SAGenTestChecker::markPartiallyInit(ProgramStateRef &State, const VarDecl *VD) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:330:6: warning: ‘void {anonymous}::SAGenTestChecker::markZeroCleared(clang::ento::ProgramStateRef&, const clang::VarDecl*) const’ defined but not used [-Wunused-function]
  330 | void SAGenTestChecker::markZeroCleared(ProgramStateRef &State, const VarDecl *VD) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:234:17: warning: ‘clang::QualType {anonymous}::getElementTypeIfArray(clang::QualType)’ defined but not used [-Wunused-function]
  234 | static QualType getElementTypeIfArray(QualType T) {
      |                 ^~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
